--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <button type="button">Замовити послугу</button>
       </section>
       <section>
+        <h2>Наші переваги</h2>
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -71,22 +72,22 @@
         <ul>
           <li>
             <img src="/images/img.jpg" alt="Product Designer" width="270" />
-            <p>Ігор Дем'яненко</p>
+            <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="/images/img(1).jpg" alt="Frontend Developer" width="270" />
-            <p>Ольга Рєпіна</p>
+            <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="/images/img(2).jpg" alt="Marketing" width="270" />
-            <p>Микола Тарасов</p>
+            <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="/images/img(3).jpg" alt="UI Designer" width="270" />
-            <p>Михайло Єрмаков</p>
+            <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -95,9 +96,18 @@
     <footer>
       <a href="/">WebStudio</a>
       <address>
-        м. Київ, пр-т Лесі Українки, 26 <br />
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              >м. Київ, пр-т Лесі Українки, 26 <br />
+            </a>
+          </li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a> <br /></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
