--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img src="/images/box1.jpg" alt="програмування" width="370" />
-            <img src="/images/box2.jpg" alt="кросплатформеність" width="370" />
-            <img src="/images/box3.jpg" alt="графічний дизайн" width="370" />
+            <img src="./images/box1.jpg" alt="програмування" width="370" />
+            <img src="./images/box2.jpg" alt="кросплатформеність" width="370" />
+            <img src="./images/box3.jpg" alt="графічний дизайн" width="370" />
           </li>
         </ul>
       </section>
@@ -71,22 +71,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="/images/img.jpg" alt="Product Designer" width="270" />
+            <img src="./images/img.jpg" alt="Product Designer" width="270" />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/images/img(1).jpg" alt="Frontend Developer" width="270" />
+            <img src="./images/img(1).jpg" alt="Frontend Developer" width="270" />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="/images/img(2).jpg" alt="Marketing" width="270" />
+            <img src="./images/img(2).jpg" alt="Marketing" width="270" />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="/images/img(3).jpg" alt="UI Designer" width="270" />
+            <img src="./images/img(3).jpg" alt="UI Designer" width="270" />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
