--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
     <title>Project</title>
   </head>
   <body>
+    <!-- Шапка сторінки -->
     <header>
+      <!-- Меню навігації -->
       <nav>
-        <a href="/">WebStudio</a>
+        <a lang="en" href="./index.html">WebStudio</a>
         <ul>
           <li>
-            <a href="">Студія</a>
+            <a href="./index.html">Студія</a>
           </li>
           <li>
-            <a href="">Портфоліо</a>
+            <a href="#">Портфоліо</a>
           </li>
           <li>
-            <a href="">Контакти</a>
+            <a href="#">Контакти</a>
           </li>
         </ul>
       </nav>
@@ -31,11 +33,14 @@
         </li>
       </ul>
     </header>
+    <!-- Унікальний контент -->
     <main>
+      <!-- Рішення для бізнесу -->
       <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
+      <!-- Наші переваги -->
       <section>
         <h2>Наші переваги</h2>
         <ul>
@@ -57,44 +62,51 @@
           </li>
         </ul>
       </section>
+      <!-- Чим ми займаємося -->
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
+          <li><img src="./images/box1.jpg" alt="Людина програмує за комп'ютером" width="370" /></li>
           <li>
-            <img src="./images/box1.jpg" alt="програмування" width="370" />
-            <img src="./images/box2.jpg" alt="кросплатформеність" width="370" />
-            <img src="./images/box3.jpg" alt="графічний дизайн" width="370" />
+            <img
+              src="./images/box2.jpg"
+              alt="Людина працює за комп'ютером та смартфоном"
+              width="370"
+            />
           </li>
+          <li><img src="./images/box3.jpg" alt="Людина працює за планшетом" width="370" /></li>
         </ul>
       </section>
+      <!-- Наша команда -->
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
             <img src="./images/img.jpg" alt="Product Designer" width="270" />
             <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/img(1).jpg" alt="Frontend Developer" width="270" />
             <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img(2).jpg" alt="Marketing" width="270" />
             <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <p lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/img(3).jpg" alt="UI Designer" width="270" />
             <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
+    <!-- Підвал -->
     <footer>
-      <a href="/">WebStudio</a>
+      <a lang="en" href="./index.html">WebStudio</a>
       <address>
         <ul>
           <li>
