--- a/index.html
+++ b/index.html
@@ -4,61 +4,71 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project</title>
+    <title>WebStudio</title>
+
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сторінки -->
-    <header>
+    <header class="page-header">
       <!-- Меню навігації -->
       <nav>
-        <a lang="en" href="./index.html">WebStudio</a>
-        <ul>
+        <a lang="en" href="./index.html" class="logo">Web<span class="logo1">Studio</span></a>
+        <ul class="nav">
           <li>
-            <a href="./index.html">Студія</a>
+            <a class="nav-studio" href="./index.html">Студія</a>
           </li>
           <li>
-            <a href="#">Портфоліо</a>
+            <a class="nav-portfolio" href="#">Портфоліо</a>
           </li>
           <li>
-            <a href="#">Контакти</a>
+            <a class="nav-contacts" href="#">Контакти</a>
           </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contact-link">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="contact-link-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="contact-link-phone" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <!-- Унікальний контент -->
     <main>
       <!-- Рішення для бізнесу -->
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="business">
+        <h1 class="business-your">Ефективні рішення для вашого бізнесу</h1>
+        <button class="business-button" type="button">Замовити послугу</button>
       </section>
       <!-- Наші переваги -->
       <section>
         <h2>Наші переваги</h2>
-        <ul>
+        <ul class="advantages">
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <h3 class="advantages-details">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="advantages-details-text">
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <h3 class="advantages-punctual">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="advantages-punctual-text">
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <h3 class="advantages-planning">ПЛАНУВАННЯ</h3>
+            <p class="advantages-planning-text">
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <h3 class="advantages-technology">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="advantages-technology-text">
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
           </li>
         </ul>
       </section>
@@ -87,17 +97,17 @@
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="./images/img(1).jpg" alt="Frontend Developer" width="270" />
+            <img src="./images/img1.jpg" alt="Frontend Developer" width="270" />
             <h3>Ольга Рєпіна</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img(2).jpg" alt="Marketing" width="270" />
+            <img src="./images/img2.jpg" alt="Marketing" width="270" />
             <h3>Микола Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
-            <img src="./images/img(3).jpg" alt="UI Designer" width="270" />
+            <img src="./images/img3.jpg" alt="UI Designer" width="270" />
             <h3>Михайло Єрмаков</h3>
             <p lang="en">UI Designer</p>
           </li>
