--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
         <a lang="en" href="./index.html" class="logo">Web<span class="logo1">Studio</span></a>
         <ul class="nav">
           <li>
-            <a class="nav-studio" href="./index.html">Студія</a>
+            <a class="link" href="./index.html">Студія</a>
           </li>
           <li>
-            <a class="nav-portfolio" href="#">Портфоліо</a>
+            <a class="link" href="#">Портфоліо</a>
           </li>
           <li>
-            <a class="nav-contacts" href="#">Контакти</a>
+            <a class="link" href="#">Контакти</a>
           </li>
         </ul>
       </nav>
-      <ul class="contact-link">
+      <ul class="contact">
         <li>
-          <a class="contact-link-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-          <a class="contact-link-phone" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -44,33 +44,33 @@
     <main>
       <!-- Рішення для бізнесу -->
       <section class="business">
-        <h1 class="business-your">Ефективні рішення для вашого бізнесу</h1>
+        <h1 class="title">Ефективні рішення для вашого бізнесу</h1>
         <button class="business-button" type="button">Замовити послугу</button>
       </section>
       <!-- Наші переваги -->
       <section>
-        <h2>Наші переваги</h2>
-        <ul class="advantages">
+        <h2 class="advantages">Наші переваги</h2>
+        <ul>
           <li>
-            <h3 class="advantages-details">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="advantages-details-text">
               Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
             </p>
           </li>
           <li>
-            <h3 class="advantages-punctual">ПУНКТУАЛЬНІСТЬ</h3>
+            <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="advantages-punctual-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
             </p>
           </li>
           <li>
-            <h3 class="advantages-planning">ПЛАНУВАННЯ</h3>
+            <h3 class="title">ПЛАНУВАННЯ</h3>
             <p class="advantages-planning-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3 class="advantages-technology">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="advantages-technology-text">
               Значимість цих проблем настільки очевидна, що реалізація планових завдань.
             </p>
@@ -123,7 +123,7 @@
     <footer>
       <a lang="en" href="./index.html">WebStudio</a>
       <address>
-        <ul>
+        <ul class="contact">
           <li>
             <a
               href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
